SkipLink: fix z-index

--- a/src/components/SkipLink/SkipLink.css
+++ b/src/components/SkipLink/SkipLink.css
@@ -4,6 +4,7 @@
   left: -100%;
   padding-left: 40px;
   padding-right: 40px;
+  z-index: 2;
 }
 
 .skip-link:focus {
